knative/service.yaml
apiVersion: serving.knative.dev/v1 # Current version of Knative
kind: Service
metadata:
  name: helloworld-go # The name of the app
  namespace: default # The namespace the app will use
spec:
  template:
  spec:
    containers:
      - image: gcr.io/knative-samples/helloworld-go # The URL to the image of the app
        env:
          - name: TARGET # The environment variable printed out by the sample app
            value: "Yeah, it still works - version 2 !!!"
